--- a/frontend/src/components/ButtonIcon/styles.css
+++ b/frontend/src/components/ButtonIcon/styles.css
@@ -1,4 +1,35 @@
-.btn-icon {
-    width: 260px;
+.btn-container {
+    display: flex;
+}
+
+.btn-container button {
+    border-radius: 10px 0 0 10px;
+}
+
+.btn h6 {
+    color: #ffffff;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.btn-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
     height: 50px;
+    border-radius: 0 10px 10px 0;
+    background-color: #33569b;
+}
+
+@media (min-width: 576px) {
+    .btn h6 {
+        font-size: 18px;
+    }
+
+    .btn-icon-container {
+        width: 70px;
+        height: 70px;
+    }
+
 }
