--- a/frontend/src/pages/ProductDetails/styles.css
+++ b/frontend/src/pages/ProductDetails/styles.css
@@ -8,7 +8,6 @@
 }
 
 .back-container {
-    border: brown solid;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
@@ -31,6 +30,9 @@
 .img-container {
     text-align: center;
     margin-bottom: 20px;
+    border: 1px solid #E1E1E1;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 .img-container img {
@@ -47,6 +49,12 @@
     font-size: 1.1em;
 }
 
+.description-container {
+    border: 1px solid #E1E1E1;
+    border-radius: 20px;
+    padding: 10px;
+}
+
 .description-container  h2 {
     color: #9E9E9E;
     letter-spacing: -0.015em;
@@ -58,4 +66,62 @@
     color: #9E9E9E;
     letter-spacing: -0.015em;
     font-size: 0.6em;
+}
+
+@media (min-width: 576px) {
+    .product-details-container {
+        padding: 20px;
+        font-size: 32px;
+    }
+
+    .product-details-card {
+        padding: 20px;
+    }
+
+}
+@media (min-width: 992px) {
+    .product-details-container {
+        padding: 40px;
+    }
+
+    .product-details-card {
+        padding: 40px;
+    }
+
+    .img-container img {
+        width: 50%;
+    }
+
+    .description-container {
+        padding: 40px;
+    }
+
+    .name-price-container {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media (min-width: 1200px) {
+    .name-price-container {
+        display: block;
+    }
+
+    .img-container img {
+        height: 280px;
+        width: auto;
+    }
+
+    .description-container {
+        min-height: 422px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .img-container img {
+        height: 280px;
+        width: auto;
+    }
+
+
 }
