feat: Finishing product card list
    - responsive layout for mobile view

--- a/frontend/src/assets/styles/custom.scss
+++ b/frontend/src/assets/styles/custom.scss
@@ -1,6 +1,7 @@
 $theme-colors: (
   'primary': #407bff,
-  'danger': #ff4444,
+  'secondary': #9E9E9E,
+  'danger': #df5753,
 );
 
 $body-bg: #f2f2f2;
