--- a/frontend/src/pages/Admin/Products/CategoryBadge/styles.css
+++ b/frontend/src/pages/Admin/Products/CategoryBadge/styles.css
@@ -1,11 +1,13 @@
-.product-badge-container {
+.category-badge-container {
     height: 33px;
+    width: 135px;
     padding: 7px;
     border-radius: 10px;
     background-color: #C4C4C4;
     color: #424242;
     font-weight: 700;
     font-size: 14px;
+    text-align: center;
     letter-spacing: -0.015em;
-    margin-right: 10px;
+    margin: 0 10px 10px 0;
 }
