--- a/frontend/src/pages/Admin/Products/ProductCardCrud/styles.css
+++ b/frontend/src/pages/Admin/Products/ProductCardCrud/styles.css
@@ -24,5 +24,22 @@
 
 .product-categories-container-crud {
     display: flex;
-    margin: 0 20px;
+    flex-wrap: wrap;
+    margin: 0 0 15px 20px;
+}
+
+.product-card-buttons-container-crud {
+    padding: 0 20px 20px 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.product-card-btn-crud {
+    height: 40px;
+    width: 110px;
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: -0.015em;
+    border-radius: 10px;
+    margin-right: 10px;
 }
