feat: Adding React Select component
    - using react-select component for Categories in form card
    - styling react-select component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,6 +21,7 @@ a, a:hover {
 }
 
 .base-input {
+    background-color: #ffffff;
     border-radius: 10px;
     font-size: 1em;
     letter-spacing: -0.015em;
